# PythonLibrary-proptables

./: CHANGELOG.txt  LICENCE.txt  MANIFEST.in  R134a_PresSat.csv  README.md  README.txt  calSuperHeatData.py  propertytable.py  pyproject.toml  setup.cfg  setup.py  superheated.py  test.py
.github/workflows/: python-publish.yml
Lib/: __init__.py  calSatData.py  calSuperHeatData.py  test.py
PropTable.egg-info/: PKG-INFO  SOURCES.txt
Refrigerant_R134a_Property_Table.egg-info/: PKG-INFO  SOURCES.txt
proptable/: __init__.py  calSatData.py  calSuperHeatData.py  main.py  superheated.py  test.py
proptable.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
proptables/: calSatData.py  calSuperHeatData.py  import_data.py  main.py  test.py
proptables.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
proptables/R134a/: R134a_Super.csv  __init__.py  calSatData.py  calSuperHeatData.py  main.py  superheated.py
proptables/water/: H2O_PresSat.csv  H2O_Super.csv  H2O_TempSat.csv  calwatersat.py  calwatersuperheat.py  import_data_water.py  main.py  superheated.py  test.py
src/: calSatData.py  interpolate.py  test.py
