[metadata]
name = proptables
version = 0.1.0
author = Buddhi Wijenayake
author_email = wijenayakebuddhi34802@gmail.com
description = For generating property table values for given input
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Buddhi19/PropertyTables_Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True